# django-portrait

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
django_portrait/: apps.py  models.py  urls.py  views.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: README.md
example/example/: settings.py  urls.py
example/templates/django_portrait/: base.html
tests/: settings.py  test_models.py  urls.py
