[tool.poetry]
name = "django-portrait"
version = "0.1.0"
description = "User portraits for Django projects."
authors = ["AndreGuerra123 <guerraandre@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
codecov = "^2.0"
flake8 = "^3.7"
tox = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
